Added headings for articles

--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -11,12 +11,14 @@
 <body>
     <header>Header</header>
     <main>
-        <section>Hero section
+        <section>
+            <h2>Hero section</h2>
             <article>Work #</article>
             <article>Work #</article>
             <article>Work #</article>
         </section>
-        <section>Services section
+        <section>
+            <h2>Services section</h2>
             <article>Article #</article>
             <article>Article #</article>
             <article>Article #</article>
@@ -24,7 +26,8 @@
         <section>Works section</section>
         <section>About section</section>
         <section>Latest news section</section>
-        <section>Testimonials section
+        <section>
+            <h2>Testimonials section</h2>
             <article>Testimonial #</article>
             <article>Testimonial #</article>
             <article>Testimonial #</article>
