--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -12,25 +12,22 @@
     <header>Header</header>
     <main>
         <section>
-            <h2>Hero section</h2>
-            <article>Work #</article>
-            <article>Work #</article>
-            <article>Work #</article>
+            <article>Work 1</article>
+            <article>Work 2</article>
+            <article>Work 3</article>
         </section>
-        <section>
-            <h2>Services section</h2>
-            <article>Article #</article>
-            <article>Article #</article>
-            <article>Article #</article>
+        <section>Services section
+            <article>Article 1</article>
+            <article>Article 2</article>
+            <article>Article 3</article>
         </section>
         <section>Works section</section>
         <section>About section</section>
         <section>Latest news section</section>
-        <section>
-            <h2>Testimonials section</h2>
-            <article>Testimonial #</article>
-            <article>Testimonial #</article>
-            <article>Testimonial #</article>
+        <section>Testimonials section
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
         </section>
         <section>Contact section</section>
     </main>
