--- a/html_advanced/11-styleguide.html
+++ b/html_advanced/11-styleguide.html
@@ -9,8 +9,7 @@
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <header>
-    </header>
+    <header></header>
     <main>
         <section>
             <header>
@@ -24,7 +23,6 @@
             </header>
         </section>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
 </body>
 </html>
