Changed articles names in testimonials

--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -106,13 +106,13 @@
                 </header>
                 <div>
                     <article>
-                        <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                        <h3>Testimonial 1</h3>
                     </article>
                     <article>
-                        <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+                        <h3>Testimonial 2</h3>
                     </article>
                     <article>
-                        <h3>Bestiarum vero nullum iudicium puto.</h3>
+                        <h3>Testimonial 3</h3>
                     </article>
                 </div>
             </div>
