--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -72,15 +72,9 @@
         <section>
             <h2>Testimonials</h2>
                 <p>We are more than a digital company</p>
-                <article>
-                    <h3>Hoc loco tenere se Triarius non potuit.</h3>
-                </article>
-                <article>
-                    <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-                </article>
-                <article>
-                    <h3>Bestiarum vero nullum iudicium puto.</h3>
-                </article>
+                <article>Testimonial 1</article>
+                <article>Testimonial 2</article>
+                <article>Testimonial 3</article>
         </section>
         <section>
             <h2>Contact</h2>
