--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -109,8 +109,8 @@
                     <article>
                         <p>Career</p>
                             <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?<small>By Kelly D.</small></p>
-                                
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                                <cite><small>By Kelly D.</small></cite>
 
                     </article>
                     <article>
