Using adress tag

--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -162,7 +162,7 @@
     <!-- Footer -->
     <footer>
         <div>
-            <p>234 Washington Street<br>Urbana, Illinois</p>
+            <address>234 Washington Street<br>Urbana, Illinois</address>
             <ul>
             <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
             <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
